--- a/DxEngine.vcxproj.filters
+++ b/DxEngine.vcxproj.filters
@@ -33,6 +33,9 @@
     <Filter Include="src\render">
       <UniqueIdentifier>{9b2be666-378a-4c53-91ff-cd98354a3807}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\controls">
+      <UniqueIdentifier>{e7ca327b-c951-4278-b3d6-7169dde89f34}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\imgui\imconfig.h">
@@ -59,32 +62,41 @@
     <ClInclude Include="include\imgui\imstb_truetype.h">
       <Filter>external\imgui</Filter>
     </ClInclude>
-    <ClInclude Include="src\core\Init.h">
-      <Filter>src\core</Filter>
-    </ClInclude>
-    <ClInclude Include="src\core\InitBuff.h">
-      <Filter>src\core</Filter>
-    </ClInclude>
-    <ClInclude Include="src\core\InitDevice.h">
-      <Filter>src\core</Filter>
-    </ClInclude>
-    <ClInclude Include="src\core\InitShader.h">
-      <Filter>src\core</Filter>
-    </ClInclude>
     <ClInclude Include="src\core\InitWindow.h">
-      <Filter>src\core</Filter>
-    </ClInclude>
-    <ClInclude Include="src\core\ReadObj.h">
       <Filter>src\core</Filter>
     </ClInclude>
     <ClInclude Include="include\entt\entt.hpp">
       <Filter>external\entt</Filter>
     </ClInclude>
-    <ClInclude Include="FrameStats.h">
+    <ClInclude Include="src\render\InitBuff.h">
       <Filter>src\render</Filter>
     </ClInclude>
-    <ClInclude Include="DeltaTime.h">
+    <ClInclude Include="src\render\InitDevice.h">
+      <Filter>src\render</Filter>
+    </ClInclude>
+    <ClInclude Include="src\render\InitShader.h">
+      <Filter>src\render</Filter>
+    </ClInclude>
+    <ClInclude Include="src\render\ObjectToRender.h">
+      <Filter>src\render</Filter>
+    </ClInclude>
+    <ClInclude Include="src\render\ReadObj.h">
+      <Filter>src\render</Filter>
+    </ClInclude>
+    <ClInclude Include="src\render\DeltaTime.h">
+      <Filter>src\render</Filter>
+    </ClInclude>
+    <ClInclude Include="src\render\FrameStats.h">
+      <Filter>src\render</Filter>
+    </ClInclude>
+    <ClInclude Include="src\DxEngine.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="src\core\Main.h">
       <Filter>src\core</Filter>
+    </ClInclude>
+    <ClInclude Include="src\controls\Camera.h">
+      <Filter>src\controls</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -106,29 +118,35 @@
     <ClCompile Include="include\imgui\imgui_widgets.cpp">
       <Filter>external\imgui</Filter>
     </ClCompile>
-    <ClCompile Include="src\core\InitBuff.cpp">
-      <Filter>src\core</Filter>
-    </ClCompile>
-    <ClCompile Include="src\core\InitDevice.cpp">
-      <Filter>src\core</Filter>
-    </ClCompile>
-    <ClCompile Include="src\core\InitShader.cpp">
-      <Filter>src\core</Filter>
-    </ClCompile>
     <ClCompile Include="src\core\InitWindow.cpp">
       <Filter>src\core</Filter>
     </ClCompile>
-    <ClCompile Include="src\core\main.cpp">
-      <Filter>src\core</Filter>
-    </ClCompile>
-    <ClCompile Include="src\core\ReadObj.cpp">
-      <Filter>src\core</Filter>
-    </ClCompile>
-    <ClCompile Include="FrameStats.cpp">
+    <ClCompile Include="src\render\InitBuff.cpp">
       <Filter>src\render</Filter>
     </ClCompile>
-    <ClCompile Include="DeltaTime.cpp">
+    <ClCompile Include="src\render\InitDevice.cpp">
+      <Filter>src\render</Filter>
+    </ClCompile>
+    <ClCompile Include="src\render\InitShader.cpp">
+      <Filter>src\render</Filter>
+    </ClCompile>
+    <ClCompile Include="src\render\ObjectToRender.cpp">
+      <Filter>src\render</Filter>
+    </ClCompile>
+    <ClCompile Include="src\render\ReadObj.cpp">
+      <Filter>src\render</Filter>
+    </ClCompile>
+    <ClCompile Include="src\render\DeltaTime.cpp">
+      <Filter>src\render</Filter>
+    </ClCompile>
+    <ClCompile Include="src\render\FrameStats.cpp">
+      <Filter>src\render</Filter>
+    </ClCompile>
+    <ClCompile Include="src\core\Main.cpp">
       <Filter>src\core</Filter>
+    </ClCompile>
+    <ClCompile Include="src\controls\Camera.cpp">
+      <Filter>src\controls</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
